Changed width to fix display issues on firefox

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/download.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/download.css
@@ -83,5 +83,5 @@
 }
 
 .vex.vex-theme-os .vex-content {
-    width: 675px !important;
+    width: 750px !important;
 }
